<resources>
    <string name="app_name">Phone Call Recorder</string>
    <string name="no_data">No Data</string>
    <string name="start_recording_call">Start Recording Calls</string>
    <string name="call_recording">Call Recording</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="phone_permissions_needed_for">Phone Permissions needed for</string>
    <string name="call_recording_on">Recording calls: Active</string>
    <string name="unsaved">Unsaved</string>
    <string name="select_one_of_the_option">Select one of the options</string>
    <string name="view">VIEW</string>
    <string name="call">CALL</string>
    <string name="share">SHARE</string>
    <string name="delete">DELETE</string>
    <string name="mohammad_abuqauod" translatable="false">Mohammad AbuQauod</string>
    <string name="ui_ux_designer_android_developer" translatable="false">UI/UX Designer | Android Developer</string>
    <string name="follow_me" translatable="false">FOLLOW ME</string>
    <string name="qauod_gmail_com" translatable="false">mqauod@gmail.com</string>
    <string name="github_me" translatable="false">https://github.com/abuqauod/</string>
    <string name="collections">Collections</string>
    <string name="_1782">1782</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>

    <string name="title_fingerprint">One-touch Sign In</string>
    <string name="desc_fingerprint">Please place your fingertip on the scanner to verify your identity</string>
    <string name="note">(Fingerprint sign in makes your app login much faster. Your device should have at least one fingerprint registered in device settings)</string>
    <string name="ur_device_no_sensor">Your Device does not have a Fingerprint Sensor</string>
    <string name="auth_permission_disabled">Fingerprint authentication permission disabled</string>
    <string name="no_fingers_in_device">Register at least one fingerprint in Settings</string>
    <string name="lock_screen_disabled">Lock screen security not enabled in Settings</string>
    <string name="fingerprint_auth_error">Fingerprint Authentication error</string>
    <string name="fingerprint_auth_help">Fingerprint Authentication help</string>
    <string name="fingerprint_auth_failed">Fingerprint Authentication failed.</string>
    <string name="fingerprint_auth_succeeded">Fingerprint Authentication succeeded.</string>
    <string name="fingerprint_change">Change Finger Print</string>
    <string name="fingerprint_enable_it">Enable Fingerprint Authentication?</string>

</resources>
