<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="350dp"
              android:layout_height="match_parent"
              android:background="@android:drawable/editbox_dropdown_light_frame"
              android:orientation="vertical">

    <com.call.recorder.helper.TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="14dp"
        android:text="@string/select_one_of_the_option"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:layout_gravity="center"
        android:background="@color/grey"/>

    <com.call.recorder.helper.TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawablePadding="16dp"
        android:drawableStart="@drawable/ic_play_circle_outline_black_24dp"
        android:gravity="start"
        android:padding="14dp"
        android:text="@string/view"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:layout_gravity="center"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@color/grey"/>

    <com.call.recorder.helper.TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawablePadding="16dp"
        android:drawableStart="@drawable/ic_phone_black_24dp"
        android:gravity="start"
        android:padding="14dp"
        android:text="@string/call"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:layout_gravity="center"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@color/grey"/>

    <com.call.recorder.helper.TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawablePadding="16dp"
        android:drawableStart="@drawable/ic_share_black_24dp"
        android:gravity="start"
        android:padding="14dp"
        android:text="@string/share"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:layout_gravity="center"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@color/grey"/>

    <com.call.recorder.helper.TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawablePadding="16dp"
        android:drawableStart="@drawable/ic_delete_black_24dp"
        android:gravity="start"
        android:padding="14dp"
        android:text="@string/delete"/>

    <com.call.recorder.helper.TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawablePadding="16dp"
        android:drawableStart="@drawable/ic_delete_black_24dp"
        android:gravity="start"
        android:padding="14dp"
        android:text="@string/delete"
        android:visibility="invisible"/>


</LinearLayout>