<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:frisson="http://schemas.android.com/apk/res-auto"
                android:id="@+id/activity_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#fff">

    <com.intrusoft.library.FrissonView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:frisson="http://schemas.android.com/apk/res-auto"
        android:id="@+id/wave_head"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        frisson:alphaValue="50"
        frisson:gradientType="linear"
        frisson:gradient_endColor="@color/colorPrimaryDark"
        frisson:gradient_startColor="@color/colorPrimary"
        frisson:src="@color/white"
        frisson:tideCount="2"
        frisson:tideHeight="60dp"
        frisson:tintColor="@color/colorPrimaryDark"/>


    <View
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ic_edit_black_24dp"/>

    <android.support.v7.widget.CardView
        android:id="@+id/image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="42sp"
        frisson:cardCornerRadius="50dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher_outline"/>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/image"
        android:layout_marginStart="28dp"
        android:layout_toEndOf="@+id/image"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/mohammad_abuqauod"
        android:textColor="#ccffffff"
        android:textSize="22sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_marginStart="28dp"
        android:layout_marginTop="4dp"
        android:layout_toEndOf="@+id/image"
        android:text="@string/ui_ux_designer_android_developer"
        android:textColor="#aaffffff"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about"
        android:layout_marginStart="28dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/image"
        android:background="@drawable/border"
        android:gravity="center"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:text="@string/follow_me"
        android:textColor="#ccffffff"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/wave_head"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="9096"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="Followers"
                    android:textColor="#cc424242"/>
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="#aa424242"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="2"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="Following"
                    android:textColor="#cc424242"/>
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="#aa424242"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="1782"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="Collections"
                    android:textColor="#cc424242"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="26dp"
            android:drawablePadding="24dp"
            android:drawableStart="@drawable/ic_settings_black_24dp"
            android:gravity="center"
            android:text="@string/qauod_gmail_com"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="26dp"
            android:drawablePadding="24dp"
            android:drawableStart="@drawable/ic_settings_black_24dp"
            android:gravity="center"
            android:text="@string/github_me"
            android:textColor="@color/colorPrimary"/>
    </LinearLayout>
</RelativeLayout>